--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ a {
   height: 30px;
   position: fixed;
   top: 20px;
-  left: 45px;
+  left: 50px;
 }
 
 /* General */
@@ -106,6 +106,22 @@ a {
 .tesla-products-menu {
   text-align: center;
   display: inline-block;
+  margin-left: 200px;
+}
+
+.tesla-products-menu a,
+.shop-acoount-menu a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 8px 16px;
+}
+
+.tesla-products-menu a:hover,
+.shop-acoount-menu a:hover {
+  background-color: #787c84;
+  border-radius: 12px;
 }
 
 .main-header {
@@ -132,6 +148,12 @@ a {
   display: inline-block;
   font-size: 28px;
   font-weight: 600;
+}
+
+.benefit-category {
+  font-size: 12px;
+  font-weight: 400;
+  text-align: center;
 }
 
 /* section-2 Safety */
@@ -196,7 +218,7 @@ a {
 }
 
 .top-nav {
-  padding: 5px 30px;
+  padding: 15px 30px;
   text-align: center;
 }
 
