--- a/styles/style.css
+++ b/styles/style.css
@@ -44,11 +44,76 @@ h1 {
   font-weight: 600;
 }
 
+h2 {
+  font-size: 28px;
+  font-weight: 600;
+}
+
 a {
   font-weight: 900;
 }
 
 /* ID's */
+
+/* Buttons */
+.circle-btn {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #000000;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-family: "GothamSSm";
+  margin: 0 5px;
+}
+
+.circle-btn span {
+  border: 3px solid #000000;
+  border-radius: 75px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  font-size: 25px;
+  margin-right: 7px;
+  line-height: 35px;
+  vertical-align: middle;
+}
+
+.circle-btn span:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.order-btn {
+  font-size: 12px;
+  text-transform: uppercase;
+  border-radius: 32px;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 3px solid #000000;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #000000;
+}
+
+.order-btn:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.order-btn.white {
+  border: 3px solid #ffffff;
+  color: #ffffff;
+  padding: 10px 34px;
+  letter-spacing: 0;
+  font-weight: 400;
+}
+
+.order-btn.white:hover {
+  background-color: #ffffff;
+  color: #000000;
+}
 
 /* Logo */
 .logo {
@@ -68,6 +133,11 @@ a {
   width: 100vw;
 }
 
+.light-header {
+  font-size: 17px;
+  font-weight: 300;
+}
+
 .regular-paragraph {
   font-size: 14px;
   color: #393c41;
@@ -78,15 +148,44 @@ a {
 .side-nav {
   position: fixed;
   left: 10px;
-  top: 50%;
-  font-size: 16px;
-  text-align: center;
+  top: 40%;
+  z-index: 100;
+}
+
+.side-nav div {
+  height: 25px;
+  margin: 5px 0;
 }
 
 .side-nav a {
+  color: #e2e4e4;
+  text-decoration: none;
+  margin: 5px 0;
+  display: block;
+}
+
+.line-wrapper {
   display: inline-block;
-  color: white;
+}
+
+.side-nav-line {
+  display: inline-block;
+  width: 1px;
+  height: 24px;
+  line-height: 24px;
+  background-color: #e2e4e4;
+  margin: 0 10px;
+}
+.side-nav-text {
+  display: none;
+  text-transform: uppercase;
   font-size: 10px;
+  height: 24px;
+  vertical-align: middle;
+}
+
+.line-wrapper:hover + .side-nav-text {
+  display: inline-block;
 }
 
 /* section-1 Model 3 */
@@ -100,7 +199,7 @@ a {
 
 .shop-acoount-menu {
   float: right;
-  margin-right: 50px;
+  margin-right: 25px;
 }
 
 .tesla-products-menu {
@@ -110,7 +209,8 @@ a {
 }
 
 .tesla-products-menu a,
-.shop-acoount-menu a {
+.shop-acoount-menu a,
+.shop-acoount-menu input {
   color: #ffffff;
   text-decoration: none;
   font-size: 14px;
@@ -118,8 +218,15 @@ a {
   padding: 8px 16px;
 }
 
+.shop-acoount-menu input {
+  background-color: transparent;
+  border: none;
+  font-family: GothamSSm;
+}
+
 .tesla-products-menu a:hover,
-.shop-acoount-menu a:hover {
+.shop-acoount-menu a:hover,
+.shop-acoount-menu input:hover {
   background-color: #787c84;
   border-radius: 12px;
 }
@@ -134,26 +241,48 @@ a {
 
 .car-benefits-container {
   position: absolute;
-  bottom: 10%;
+  bottom: 3%;
   width: 100vw;
-  background-color: blue;
   text-align: center;
 }
 
 .benefits-list {
   list-style: none;
+  margin-left: -15px;
 }
 
 .benefits-list-item {
   display: inline-block;
+  width: 160px;
+  vertical-align: middle;
+}
+
+.benefit-value {
   font-size: 28px;
   font-weight: 600;
+}
+
+.benefit-value {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.unit {
+  font-size: 24px;
+  font-weight: 600;
+  margin-left: 5px;
 }
 
 .benefit-category {
   font-size: 12px;
   font-weight: 400;
   text-align: center;
+  margin-top: 10px;
+}
+
+.next-page {
+  width: 21px;
+  display: inline-block;
 }
 
 /* section-2 Safety */
@@ -161,21 +290,81 @@ a {
 .section-2 {
   overflow: auto;
   width: 100vw;
+  position: relative;
 }
 
 .safety-info-container {
   max-width: 415px;
   height: 100vh;
   float: left;
+  padding: 50px;
+}
+
+.safety-rating {
+  background-color: #e2e4e4;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 15px;
+}
+
+.safety-rating h4 {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.safety-rating-list {
+  list-style: none;
+}
+
+.safety-rating-category {
+  display: inline-block;
+}
+
+.safety-rating-item {
+  margin-bottom: 5px;
+}
+
+.safety-rating-category p {
+  font-size: 14px;
+  font-weight: 700;
+  color: #393c41;
+}
+
+.safety-rating-category span {
+  font-size: 8px;
+  font-weight: 400;
+  color: #393c41;
+}
+
+.safety-rating-stars {
+  float: right;
+  vertical-align: middle;
+  color: #393c41;
 }
 
 .car-safty-image {
-  width: calc(100vw - 415px);
+  /* width: calc(100vw - 415px); */
+  width: 78vw;
   height: 100vh;
   background-image: url("/assets/img/model_3_safety_hero.png");
   background-position: center;
   background-size: cover;
-  float: right;
+  /* float: right; */
+  display: inline-block;
+}
+
+.safety-buttons-container {
+  position: absolute;
+  bottom: 5%;
+}
+
+.safety-buttons {
+}
+
+.safety-buttons li {
+  display: inline-block;
 }
 
 /* section-3  Performance*/
@@ -185,10 +374,29 @@ a {
   background-size: cover;
 }
 
-.performens-benefits-container {
+.performens-benefits-top {
   background-image: url("/assets/img/lhd-performance-hero-desktop.jpg");
   height: calc(100vh - 250px);
   background-position: center;
+  position: relative;
+}
+
+.performens-benefits-container {
+  width: 100vw;
+  position: absolute;
+  bottom: 10%;
+  color: #ffffff;
+}
+
+.performens-benefits-list {
+  list-style: none;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.performens-benefits-item {
+  display: inline-block;
+  margin: 15px;
 }
 
 .performance-info-bottom {
@@ -208,12 +416,16 @@ a {
 }
 
 .performance-info-headrs {
-  width: 340px;
   display: inline-block;
+  vertical-align: text-top;
+  margin-right: 25px;
+}
+
+.performance-info-headrs .safety-buttons {
+  margin-top: 15px;
 }
 
 .performance-info-description {
-  width: 620px;
   display: inline-block;
 }
 
@@ -233,10 +445,10 @@ a {
 
 .speedometer {
   width: 50px;
+  height: 20px;
   display: inline-block;
 }
 
-.safety-rating {
-  background-color: #e2e4e4;
-  border-radius: 15px;
+.speedometer svg {
+  vertical-align: middle;
 }
